--- a/html/wp-content/themes/MyFirstTheme/style.css
+++ b/html/wp-content/themes/MyFirstTheme/style.css
@@ -37,10 +37,10 @@ body{
     color: red;
     bottom: 0;
 }
-#site-content.main{
+#site-content .main{
      background-color: #4e4ed9;
 }
-#site-content.section-inner{
+#site-content .section-inner{
     background-color: #4e4ed9;
 }
 {
@@ -67,6 +67,6 @@ a:hover{
     color: orangered;
 }
 #gridcontainer{margin: 20px 0; width: 100%}
-#gridcontainer.griditemleft{float: left;width:278px; margin: 0 40px 40px 0;}
-#gridcontainer.griditemrigth{float: left; width: 278px;}
-#gridcontainer.postimage{margin: 0 0 10px 0}
+#gridcontainer .griditemleft{float: left; width:278px; margin: 0 40px 40px 0;}
+#gridcontainer .griditemrigth{float: left; width: 278px;}
+#gridcontainer .postimage{margin: 0 0 10px 0;}
